# background_attenuation_in_video

./: README.md  pyproject.toml  requirements.txt
src/video_background_attenuation/: YOLOv5.py  farneback.py  simple.py
